header-extended: fixed search input on mobile devices

--- a/src/idsk/components/header-extended/_header-extended.scss
+++ b/src/idsk/components/header-extended/_header-extended.scss
@@ -714,7 +714,9 @@
 
             width: 70%;
             max-width: 250px;
+            height: 19px;
             border: none;
+            border-radius: 0;
             padding: govuk-spacing(3);
             margin-top: 0;
             margin-bottom: 0;
